IMPLEMENTED: finished ARIMAUTils grid search

--- a/spielwiese/OutlierDetector.ipynb
+++ b/spielwiese/OutlierDetector.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3c59c8d9",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,16 @@
     "\n",
     "# testData_01_power_df.index = (testData_01_power_df.index  - testData_01_power_df.index[0]).total_seconds()\n",
     "# testData_01_power_df.drop(testData_01_power_df.index[-1], inplace=True) # dropped as that row was two days later or something\n",
-    "# display(testData_01_power_df)"
+    "# display(testData_01_power_df)\n",
+    "\n",
+    "# auto_model = pm.auto_arima(\n",
+    "#     df_train_3mm_edited[\"Transformed\"],\n",
+    "#     seasonal=False,\n",
+    "#     m=38,\n",
+    "#     boxcox_lambda='auto',  # <-- This is the magic part!\n",
+    "#     trace=True\n",
+    "# )\n",
+    "# forecast = auto_model.predict(n_periods=10)"
    ]
   }
  ],
